Changed static file organization, and changed welcome app url

--- a/flatsnstats/flatsnstats/templates/base.html
+++ b/flatsnstats/flatsnstats/templates/base.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="right">
                     <a href="https://www.strava.com">
-                        <img src="static/img/1.2 strava api logos/powered by strava/pwrd_gray.png" alt="">
+                        <img src="{% static 'img/1.2 strava api logos/powered by strava/pwrd_gray.png' %}" alt="">
                     </a>
                 </div>
             </div>
