--- a/flatsnstats/welcome/templates/welcome/index.html
+++ b/flatsnstats/welcome/templates/welcome/index.html
@@ -11,7 +11,7 @@
         <p> To use these tools you need to authorize this application to access your Strava data.</p>
 
         <a href="#">
-            <img src="static/img/1.1 connect with strava/light/light_small.png" alt="">
+            <img src="{% static 'img/1.1 connect with strava/light/light_small.png' %}" alt="Connect with Strava">
         </a>
     </div>
 {% endblock %}
