--- a/flatsnstats/flatsnstats/templates/base.html
+++ b/flatsnstats/flatsnstats/templates/base.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 
 <html lang="en">
 
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet" type='text/css' >
     <link rel="stylesheet" href="{% static 'css/base.css' %}" >
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"> <!--maybe change from link to script tag-->
+    <script rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> <!--maybe change from link to script tag-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </head>
 <body class="site">
