Implemented Custom Middleware to manage page access
By creating a custom middleware class that uses the process_view() hook,
I was able to prevent access to all other pages until user
authenticates.

--- a/flatsnstats/flatsnstats/templates/base.html
+++ b/flatsnstats/flatsnstats/templates/base.html
@@ -34,7 +34,7 @@
                 <div class="collapse navbar-collapse" id="topNavBar">
                     <ul class="nav navbar-nav">
                         <li class="">
-                            <a href="#">Fastest Segments</a>
+                            <a href="{% url 'fastest_segments' %}">Fastest Segments</a>
                         </li>
                     </ul>
 
