Added Most Ridden Segments App
Added Most Ridden Segments App

--- a/flatsnstats/flatsnstats/templates/base.html
+++ b/flatsnstats/flatsnstats/templates/base.html
@@ -40,7 +40,7 @@
 
                     <ul class="nav navbar-nav">
                         <li class="">
-                            <a href="#">Favorite Segments</a>
+                            <a href="{% url 'most_ridden_segments' %}">Most Ridden Segments</a>
                         </li>
                     </ul>
 
