Auth request now redirects to home
Auth request now redirects to home:
- The uri redirect now holds the authorization code from Strava

--- a/flatsnstats/flatsnstats/templates/base.html
+++ b/flatsnstats/flatsnstats/templates/base.html
@@ -27,7 +27,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="{% url 'index' %}">Flats-n-Stats</a>
+                    <a class="navbar-brand" href="{% url 'home' %}">Flats-n-Stats</a>
                 </div>
 
                 <!-- Items -->
