--- a/flatsnstats/welcome/templates/welcome/index.html
+++ b/flatsnstats/welcome/templates/welcome/index.html
@@ -10,7 +10,7 @@
         <p> A site for avid strava users. Utilizing the Strava API, Flats-n-Stats provides enriching data and tools to analyze your activities in new ways.</p>
         <p> To use these tools you need to authorize this application to access your Strava data.</p>
 
-        <a href="https://www.strava.com/oauth/authorize?client_id=15675&response_type=code&redirect_uri=http://127.0.0.1&approval_prompt=auto">
+        <a href="https://www.strava.com/oauth/authorize?client_id=15675&response_type=code&redirect_uri=http://127.0.0.1:8000/&approval_prompt=auto">
             <img src="{% static 'img/1.1 connect with strava/light/light_small.png' %}" alt="Connect with Strava">
         </a>
     </div>
