Beginning to use Requests and stravalib
Imported the Requests framework and Hozn's 'stravalib' library to
facilitate HTTP requests and cleaner handling of authorization details.

--- a/flatsnstats/welcome/templates/welcome/index.html
+++ b/flatsnstats/welcome/templates/welcome/index.html
@@ -11,7 +11,7 @@
         <p> To use these tools you need to authorize this application to access your Strava data.</p>
 
         <a href="https://www.strava.com/oauth/authorize?client_id=15675&response_type=code&redirect_uri=http://127.0.0.1:8000/&approval_prompt=auto">
-            <img src="{% static 'img/1.1 connect with strava/light/light_small.png' %}" alt="Connect with Strava">
+            <img src="{% static 'img/1.1_connect_with_strava/light/light_small.png' %}" alt="Connect with Strava">
         </a>
     </div>
 {% endblock %}
