--- a/flatsnstats/flatsnstats/templates/index.html
+++ b/flatsnstats/flatsnstats/templates/index.html
@@ -3,8 +3,9 @@
 
 
 {% block body %}
-    <div align="center">
-        <!-- Header -->
-        <h1 style="text-align:center;">Home Page</h1>
-    </div>
+<div align="center">
+    <!-- Header -->
+    <h1 style="text-align:center;">Home Page</h1>
+</div>
+<img src="" >
 {% endblock %}
