--- a/flatsnstats/welcome/templates/welcome/index.html
+++ b/flatsnstats/welcome/templates/welcome/index.html
@@ -7,7 +7,7 @@
         <!-- Header -->
         <h1 style="text-align:center;">Flats-n-Stats</h1>
 
-        <p> A site for avid strava users. Utilizing the Strava API, Flats-n-Stats provides enriching data and tools to analyze your activities in new ways.</p>
+        <p> A site for avid Strava users. Utilizing the Strava API, Flats-n-Stats provides enriching data and tools to analyze your activities in new ways.</p>
         <p> To use these tools you need to authorize this application to access your Strava data.</p>
 
         <a href="https://www.strava.com/oauth/authorize?client_id=15675&response_type=code&redirect_uri=http://127.0.0.1:8000/&approval_prompt=auto">
