--- a/flatsnstats/flatsnstats/templates/base.html
+++ b/flatsnstats/flatsnstats/templates/base.html
@@ -46,7 +46,7 @@
 
                     <ul class="nav navbar-nav navbar-right">
                         <li class="">
-                            <a href="#">Left-aligned app</a>
+                            <a href="#">Right-aligned app</a>
                         </li>
                     </ul>
                 </div>
