--- a/flatsnstats/flatsnstats/templates/index.html
+++ b/flatsnstats/flatsnstats/templates/index.html
@@ -11,7 +11,7 @@
 <div class="user-overview">
     <div class="user-banner">
         <div style="float: left">
-            <img class="img-circle" src="{% static 'img/placeholder.jpg' %}">
+            <img class="img-circle" src="{{profile_picture}}">
         </div>
         <div>
             <h2 class="name">{{first_name}}</h2>
