Top Training Partners page/app and linked to widget
Created the Top Training Partners app and page. Linked the home training
partners widget and navbar link to page.

--- a/flatsnstats/flatsnstats/templates/base.html
+++ b/flatsnstats/flatsnstats/templates/base.html
@@ -34,6 +34,12 @@
                 <div class="collapse navbar-collapse" id="topNavBar">
                     <ul class="nav navbar-nav">
                         <li class="">
+                            <a href="{% url 'top_training_partners' %}">Top Training Partners</a>
+                        </li>
+                    </ul>
+
+                    <ul class="nav navbar-nav">
+                        <li class="">
                             <a href="{% url 'fastest_segments' %}">Fastest Segments</a>
                         </li>
                     </ul>
