--- a/flatsnstats/flatsnstats/templates/index.html
+++ b/flatsnstats/flatsnstats/templates/index.html
@@ -18,7 +18,8 @@
             <h2 class="name">{{last_name}}</h2>
         </div>
     </div>
-    <div class="widget-container">
+    <div class="widget-container" style="position:relative">
+        <a href="{% url 'top_training_partners' %}"><span class="widget-link"></span></a>
         <div class="ride-partners">
             <h4>Top Training Partners</h4>
             <ol>
