--- a/flatsnstats/flatsnstats/templates/welcome/index.html
+++ b/flatsnstats/flatsnstats/templates/welcome/index.html
@@ -10,7 +10,8 @@
         <p> A site for avid Strava users. Utilizing the Strava API, Flats-n-Stats provides enriching data and tools to analyze your activities in new ways.</p>
         <p> To use these tools you need to authorize this application to access your Strava data.</p>
 
-        <a href="https://www.strava.com/oauth/authorize?client_id=15675&response_type=code&redirect_uri=http://127.0.0.1:8000/&approval_prompt=auto">
+
+        <a href="{% url 'strava_site' %}">
             <img src="{% static 'img/1.1_connect_with_strava/light/light_small.png' %}" alt="Connect with Strava">
         </a>
     </div>
