Last-updated added

--- a/flatsnstats/flatsnstats/templates/top_training_partners/index.html
+++ b/flatsnstats/flatsnstats/templates/top_training_partners/index.html
@@ -14,6 +14,7 @@
                     <li>{{rider}}</li>
                 {% endfor %}
             </ol>
+            <p>*last updated: {{last_updated}}</p>
         </div>
     </div>
 {% endblock %}
