--- a/flatsnstats/flatsnstats/templates/top_training_partners/index.html
+++ b/flatsnstats/flatsnstats/templates/top_training_partners/index.html
@@ -3,6 +3,7 @@
 
 
 {% block body %}
+<div class="tool-container">
     <div align="center">
         <!-- Header -->
         <h1 style="text-align:center;">Top Training Partners</h1>
@@ -17,4 +18,5 @@
             <p>*last updated: {{last_updated}}</p>
         </div>
     </div>
+</div>
 {% endblock %}
