--- a/flatsnstats/flatsnstats/templates/top_training_partners/index.html
+++ b/flatsnstats/flatsnstats/templates/top_training_partners/index.html
@@ -15,7 +15,32 @@
                     <li>{{rider}}</li>
                 {% endfor %}
             </ol>
-            <p>*last updated: {{last_updated}}</p>
+        </div>
+        <div class="update">
+            <div>
+                <button id="update_tpp" type="button" class="btn btn-default">Update</button>
+                <script type="text/javascript">
+                    $(document).ready(function(){
+                        $("#update_tpp").click(function(e){
+                            e.preventDefault();
+
+                            $.ajax({
+                                type:'POST',
+                                url:'/',
+                                data:{
+                                    name:$('#name').val(),
+                                },
+                                success:function(){
+
+                                }
+                            })
+                        });
+                    });
+                </script>
+            </div>
+            <div class="last-updated">
+                last updated: {{last_updated}}
+            </div>
         </div>
     </div>
 </div>
