temporary tz fix for last_updated()

--- a/flatsnstats/flatsnstats/templates/top_training_partners/index.html
+++ b/flatsnstats/flatsnstats/templates/top_training_partners/index.html
@@ -17,7 +17,7 @@
             </ol>
         </div>
         <div class="last-updated">
-            last updated: {{last_updated}}
+            last updated: {{last_updated}} (UTC)
         </div>
     </div>
 </div>
