--- a/flatsnstats/flatsnstats/static/css/base.css
+++ b/flatsnstats/flatsnstats/static/css/base.css
@@ -15,7 +15,7 @@ body {
 
 .footer-container {
   background-color: white;
-  color: #b3b3b3;
+  color: #6d6d6d;
   display: flex;
   justify-content: center;
   width:100%;
