--- a/flatsnstats/flatsnstats/templates/base.html
+++ b/flatsnstats/flatsnstats/templates/base.html
@@ -54,7 +54,9 @@
 
                     <ul class="nav navbar-nav navbar-right">
                         <li class="">
-                            <a href="#">Right-aligned app</a>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>&nbsp; Settings
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -73,10 +75,12 @@
         <div class="footer-container">
             <div class="footer-content-container">
                 <div class="creator-credit">
-                    &copy;2017 Marcel Aguiar
+                    <a href="https://github.com/marcelaguiar" target="_blank" style="color:inherit">
+                        &copy;2017 Marcel Aguiar
+                    </a>
                 </div>
                 <div class="right">
-                    <a href="https://www.strava.com">
+                    <a href="https://www.strava.com" target="_blank">
                         <img src="{% static 'img/1.2 strava api logos/powered by strava/pwrd_gray.png' %}" alt="">
                     </a>
                 </div>
