--- a/flatsnstats/flatsnstats/templates/index.html
+++ b/flatsnstats/flatsnstats/templates/index.html
@@ -14,8 +14,7 @@
             <img class="img-circle" src="{{profile_picture}}">
         </div>
         <div>
-            <h2 class="name">{{first_name}}</h2>
-            <h2 class="name">{{last_name}}</h2>
+            <h2 class="name">{{first_name}} {{last_name}}</h2>
         </div>
     </div>
     <div class="widget-container" style="position:relative">
