--- a/flatsnstats/flatsnstats/templates/index.html
+++ b/flatsnstats/flatsnstats/templates/index.html
@@ -17,16 +17,27 @@
             <h2 class="name">{{first_name}} {{last_name}}</h2>
         </div>
     </div>
-    <div class="widget-container" style="position:relative">
-        <a href="{% url 'top_training_partners' %}"><span class="widget-link"></span></a>
-        <div class="ride-partners">
-            <h4>Top Training Partners</h4>
-            <ol>
-            {% for rider in training_partners %}
-                <li>{{rider}}</li>
-            {% endfor %}
-                <li>...</li>
-            </ol>
+    <div class="widgets-container">
+        <div class="widget" style="position:relative">
+            <a href="{% url 'top_training_partners' %}"><span class="widget-link"></span></a>
+            <div class="ride-partners">
+                <h4>Top Training Partners</h4>
+                <ol>
+                {% for rider in training_partners %}
+                    <li>{{rider}}</li>
+                {% endfor %}
+                    <li>...</li>
+                </ol>
+            </div>
+        </div>
+        <div class="widget" style="position:relative">
+            <a href="{% url 'top_training_partners' %}"><span class="widget-link"></span></a>
+            <div class="ride-partners">
+                <h4>Fastest Segments</h4>
+                <ol>
+                    <li>...</li>
+                </ol>
+            </div>
         </div>
     </div>
 </div>
