--- a/flatsnstats/flatsnstats/static/css/base.css
+++ b/flatsnstats/flatsnstats/static/css/base.css
@@ -6,6 +6,22 @@ body {
   background-color: #e6e6e6;
 }
 
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid Silver;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+
 .creator-credit {
   float: left;
   position: relative;
