--- a/flatsnstats/flatsnstats/templates/base.html
+++ b/flatsnstats/flatsnstats/templates/base.html
@@ -42,6 +42,12 @@
 
                     <ul class="nav navbar-nav">
                         <li class="">
+                            <a href="{% url 'race_statistics' %}">Race Statistics</a>
+                        </li>
+                    </ul>
+
+                    <ul class="nav navbar-nav">
+                        <li class="">
                             <a href="{% url 'fastest_segments' %}">Fastest Segments</a>
                         </li>
                     </ul>
