--- a/flatsnstats/flatsnstats/templates/index.html
+++ b/flatsnstats/flatsnstats/templates/index.html
@@ -31,47 +31,13 @@
             </div>
         </div>
         <div class="widget" style="position:relative">
-            <a href="{% url 'top_training_partners' %}"><span class="widget-link"></span></a>
-            <div class="ride-partners">
-                <h4>Fastest Segments</h4>
-                <ol>
-                    <li>...</li>
-                </ol>
-            </div>
-        </div>
-        <div class="widget" style="position:relative">
-            <a href="{% url 'top_training_partners' %}"><span class="widget-link"></span></a>
-            <div class="ride-partners">
-                <h4>Tallest Climbs</h4>
-                <ol>
-                    <li>...</li>
-                </ol>
-            </div>
-        </div>
-        <div class="widget" style="position:relative">
-            <a href="{% url 'top_training_partners' %}"><span class="widget-link"></span></a>
-            <div class="ride-partners">
-                <h4>Most Ridden Segments</h4>
-                <ol>
-                    <li>...</li>
-                </ol>
-            </div>
-        </div>
-        <div class="widget" style="position:relative">
             <a href="{% url 'race_statistics' %}"><span class="widget-link"></span></a>
             <div class="race-statistics">
                 <h4>Race Statistics</h4>
                 <ul>
-                    <li>Total race miles: </li>
-                    <li># of races: </li>
-                    <li>Race History:
-                        <ul>
-                            <li>a</li>
-                            <li>b</li>
-                            <li>c</li>
-                            <li>...</li>
-                        </ul>
-                    </li>
+                    <li>Total race miles</li>
+                    <li># of races</li>
+                    <li>Race History</li>
                 </ul>
             </div>
         </div>
