--- a/flatsnstats/flatsnstats/templates/race_statistics/index.html
+++ b/flatsnstats/flatsnstats/templates/race_statistics/index.html
@@ -22,8 +22,12 @@
                 </tr>
             </table>
         </div>
+        <br>
         <div class="race-history">
             <h4>Race History</h4>
+            <div style="text-align:center">
+                <div id="calendar-container"></div>
+            </div>
             <ul>
             {% for race in race_list %}
                 <li><span class="width-formatted">{{race.date}}</span><a href={{race.url}}>{{race.name}}</a></li>
@@ -32,4 +36,6 @@
         </div>
     </div>
 </div>
+
+<script src="{% static 'javascript/year_calendar.js' %}"></script>
 {% endblock %}
