--- a/flatsnstats/flatsnstats/templates/index.html
+++ b/flatsnstats/flatsnstats/templates/index.html
@@ -38,7 +38,14 @@
                     <li>Total race miles</li>
                     <li># of races</li>
                     <li>Race History</li>
+                    <li>Race Calendar</li>
                 </ul>
+            </div>
+        </div>
+        <div class="widget" style="position:relative">
+            <a href="{% url 'ajax_test' %}"><span class="widget-link"></span></a>
+            <div class="ajax-test">
+                <h4>Ajax test</h4>
             </div>
         </div>
     </div>
