--- a/flatsnstats/flatsnstats/templates/race_statistics/index.html
+++ b/flatsnstats/flatsnstats/templates/race_statistics/index.html
@@ -7,6 +7,7 @@
     <div align="center">
         <!-- Header -->
         <h1 style="text-align:center;">Race Statistics</h1>
+        <span style="color:DimGrey">*only Strava activities tagged as "Race" will be shown</span>
     </div>
     <div>
         <div class="race-summary">
