--- a/flatsnstats/flatsnstats/templates/welcome/index.html
+++ b/flatsnstats/flatsnstats/templates/welcome/index.html
@@ -11,7 +11,7 @@
         <p> To use these tools you need to authorize this application to access your Strava data.</p>
 
 
-        <a href="{% url 'strava_site' %}">
+        <a href="https://www.strava.com/oauth/authorize?client_id=15675&response_type=code&redirect_uri=http://127.0.0.1:8000/temporary_redirect/&approval_prompt=auto"> <!-- {% url 'strava_site' %} -->
             <img src="{% static 'img/1.1_connect_with_strava/light/light_small.png' %}" alt="Connect with Strava">
         </a>
     </div>
